Tweaks for page refresh

--- a/src/app/invoices/pages/customer-edit-invoice/customer-edit-invoice.component.html
+++ b/src/app/invoices/pages/customer-edit-invoice/customer-edit-invoice.component.html
@@ -1,1 +1,5 @@
-<app-edit-invoice></app-edit-invoice>
+<app-edit-invoice
+    (cartUpdated)="cartUpdatedEmit($event)"
+    (showErrorMessage)="showErrorMessageEmit($event)"
+    (showSuccessMessage)="showSuccessMessageEmit($event)"
+></app-edit-invoice>
