--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="text-center mt-3">
-            <button [routerLink]="['/products']" class="btn btn-secondary">
+            <button [routerLink]="['..']" class="btn btn-secondary">
                 <i class="fas fa-arrow-left"></i> Retour
             </button>
         </div>
