--- a/src/app/shared/components/navbar-public/navbar-public.component.html
+++ b/src/app/shared/components/navbar-public/navbar-public.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/login">Se connecter</a>
+          <a class="nav-link" (click)="navigateToLogin()">Se connecter</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/register">Créer un compte</a>
+          <a class="nav-link" (click)="navigateToRegister()">Créer un compte</a>
         </li>
       </ul>
     </div>
