--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -49,9 +49,8 @@
                         />
                     </div>
                     <div class="mb-3">
-                        <label for="category" class="form-label">Catégorie :</label>
+                        <b><label for="category" class="form-label">Catégorie :</label></b>
                         <div class="row">
-                            <!-- Existing Category Dropdown -->
                             <div class="col-md-6">
                                 <select
                                     [(ngModel)]="product.category"
@@ -65,7 +64,6 @@
                                 </select>
                             </div>
                     
-                            <!-- Add New Category -->
                             <div class="col-md-6">
                                 <div class="input-group">
                                     <input
@@ -87,7 +85,17 @@
                             </div>
                         </div>
                     </div>
-                    <div *ngIf="product.image " class="mt-3">
+                    <div class="mb-3">
+                        <b><p>En ligne :</p></b>
+                        <input
+                            type="checkbox"
+                            [(ngModel)]="product.available"
+                            id="available"
+                            class="form-check-input"
+                            name="available"
+                        />
+                    </div>
+                    <div *ngIf="product.image " class="mb-3">
                         <b><p>photo :</p></b>
                         <img
                             [src]="product.image"
@@ -96,6 +104,7 @@
                             style="max-width: 200px;"
                         />
                     </div>
+                    
                 </div>
                 
                 <div class="card-footer d-flex justify-content-between">
