--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -7,7 +7,7 @@
                     <div class="p-3">
                         <div *ngIf="product.image" class="text-center">
                             <img
-                                [src]="product.image"
+                                [src]="apiUrlImage + product.image"
                                 alt="Image de l'article"
                                 class="img-fluid rounded"
                                 style="max-height: 300px; object-fit: contain;"
