tweaks + routes for admin

--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class="card-footer d-flex justify-content-between">
-                    <button class="btn btn-secondary">
+                    <button class="btn btn-secondary" type="button" (click)="redirectToInvoices()">
                         <i class="fas fa-arrow-left"></i>
                         Retour
                     </button>
