--- a/src/app/invoices/pages/admin-edit-invoice-item/admin-edit-invoice-item.component.html
+++ b/src/app/invoices/pages/admin-edit-invoice-item/admin-edit-invoice-item.component.html
@@ -1,4 +1,4 @@
-<app-edit-invoice
+<app-edit-invoice-item
     (showErrorMessage)="showErrorMessageEmit($event)"
     (showSuccessMessage)="showSuccessMessageEmit($event)"
-></app-edit-invoice>
+></app-edit-invoice-item>
