--- a/src/app/products/pages/admin-table-products/admin-table-products.component.html
+++ b/src/app/products/pages/admin-table-products/admin-table-products.component.html
@@ -2,10 +2,12 @@
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default">
-                <h1 class="mb-0 text-center" >Toutes les commandes</h1>
+                <div class="d-flex justify-content-between align-items-center">
+                    <h1 class="mb-0 text-center flex-grow-1">Tous les articles</h1>
+                </div>
             </div>
             <div class="card-body">
-                <app-table-invoice-items></app-table-invoice-items>
+                <app-table-products></app-table-products>
             </div>
         </div>
     </div>
