--- a/src/app/products/pages/admin-table-ratings/admin-table-ratings.component.html
+++ b/src/app/products/pages/admin-table-ratings/admin-table-ratings.component.html
@@ -2,10 +2,10 @@
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default">
-                <h1 class="mb-0 text-center" >Toutes les commandes</h1>
+                <h1 class="mb-0 text-center">Toutes les notes</h1>
             </div>
             <div class="card-body">
-                <app-table-invoice-items></app-table-invoice-items>
+                <app-table-ratings></app-table-ratings>
             </div>
         </div>
     </div>
