--- a/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
+++ b/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
@@ -25,6 +25,13 @@
                     >
                         <i class="fas fa-edit"></i>
                     </button>
+                    <button class="btn btn-outline-danger btn-sm" 
+                        *ngIf="showDeleteButton()"
+                        (click)="deleteInvoiceItem(invoiceItem)"
+                        title="Supprimer"
+                    >
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
                 </td>
             </tr>
         }
