--- a/src/app/products/pages/admin-edit-product/admin-edit-product.component.html
+++ b/src/app/products/pages/admin-edit-product/admin-edit-product.component.html
@@ -1,3 +1,3 @@
-<app-view-product
+<app-edit-product
     (showSuccessMessage)="showSuccessMessageEmit($event)"
-></app-view-product>
+></app-edit-product>
