--- a/src/app/shared/components/container/container.component.html
+++ b/src/app/shared/components/container/container.component.html
@@ -1,4 +1,4 @@
-<app-navbar-wrapper  [numberCart]="cartCount"></app-navbar-wrapper>
+<app-navbar-wrapper></app-navbar-wrapper>
 <p-toast />
 <div class="container" style="margin-top: 20px;">
   <router-outlet (activate)="onActivate($event)"></router-outlet>
