--- a/src/app/products/components/rate-product/rate-product.component.html
+++ b/src/app/products/components/rate-product/rate-product.component.html
@@ -5,7 +5,7 @@
                 <h4 class="card-header">Evaluer l'article</h4>
                 <div class="card-body">
                     <div class="mb-3">
-                        <b><label for="name" class="form-label">Nom de l'article :</label></b>
+                        <b><label for="name" class="form-label">Nom de l'article</label></b>
                         <p>{{ invoiceItem.productName }}</p>
                     </div>
                     <div class="mb-3">
