--- a/src/app/products/components/shop-products/shop-products.component.html
+++ b/src/app/products/components/shop-products/shop-products.component.html
@@ -12,7 +12,7 @@
                 <div class="row mb-4 align-items-end">
                     <!-- Category Filter -->
                     <div class="col-md-3">
-                        <label for="categoryFilter" class="form-label fw-bold">Catégorie :</label>
+                        <label for="categoryFilter" class="form-label fw-bold">Catégorie</label>
                         <select
                             [(ngModel)]="selectedCategory"
                             id="categoryFilter"
@@ -28,7 +28,7 @@
 
                     <!-- Minimum Price Filter -->
                     <div class="col-md-2">
-                        <label for="minPriceFilter" class="form-label fw-bold">Prix minimum :</label>
+                        <label for="minPriceFilter" class="form-label fw-bold">Prix minimum</label>
                         <input
                             [(ngModel)]="minPrice"
                             type="number"
@@ -41,7 +41,7 @@
 
                     <!-- Maximum Price Filter -->
                     <div class="col-md-2">
-                        <label for="maxPriceFilter" class="form-label fw-bold">Prix maximum :</label>
+                        <label for="maxPriceFilter" class="form-label fw-bold">Prix maximum</label>
                         <input
                             [(ngModel)]="maxPrice"
                             type="number"
@@ -54,7 +54,7 @@
 
                     <!-- Search Filter -->
                     <div class="col-md-3">
-                        <label for="searchFilter" class="form-label fw-bold">Rechercher :</label>
+                        <label for="searchFilter" class="form-label fw-bold">Rechercher</label>
                         <div class="input-group">
                             <input
                                 [(ngModel)]="searchQuery"
@@ -72,7 +72,7 @@
 
                     <!-- Order by-->
                     <div class="col-md-2 mt-3">
-                        <label for="orderBy" class="form-label fw-bold">Trier par :</label>
+                        <label for="orderBy" class="form-label fw-bold">Trier par</label>
                         <select
                             [(ngModel)]="orderBy"
                             id="orderBy"
