--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -8,7 +8,7 @@
                         <thead class="table-light">
                             <tr>
                                 <th>#</th>
-                                <th colspan="2">Article</th>
+                                <th>Article</th>
                                 <th>Quantité</th>
                                 <th>Prix</th>
                                 <th>Total</th>
@@ -18,18 +18,13 @@
                         <tbody>
                             <tr *ngFor="let item of invoice.invoiceItems; let i = index">
                                 <th>{{ i + 1 }}</th>
-                                <td><img 
-                                    *ngIf="item.productImage" 
-                                    [src]="apiUrlImage + item.productImage" 
-                                    class="card-img-top" 
-                                    style="height: 20px; object-fit: cover;"
-                                /></td>
                                 <td>{{ item.productName }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.unitPrice }} €</td>
                                 <td>{{ item.quantity * item.unitPrice }} €</td>
                                 <td>
                                     <button 
+                                        type="button"
                                         class="btn btn-outline-danger btn-sm"
                                         (click)="deleteItem(item.id)"
                                     >
