--- a/src/app/users/components/table-users/table-users.component.html
+++ b/src/app/users/components/table-users/table-users.component.html
@@ -13,6 +13,7 @@
                             <th scope="col">Nom</th>
                             <th scope="col">Prénom</th>
                             <th scope="col">Rôle</th>
+                            <th scope="col" class="text-center">Bloqué</th>
                             <th scope="col" class="text-end"></th>
                         </tr>
                     </thead>
@@ -26,9 +27,27 @@
                                 <td>{{ user.firstname }}</td>
                                 <td>{{ user.lastname }}</td>
                                 <td>{{ getRoleLabel(user.role) }}</td>
+                                <td class="text-center">
+                                    <span *ngIf="user.isBlocked" class="badge bg-danger">Oui</span>
+                                    <span *ngIf="!user.isBlocked" class="badge bg-success">Non</span>
+                                </td>
                                 <td class="text-end">
+                                    <button
+                                        class="btn btn-outline-warning ms-2"
+                                        (click)="blockUser(user.id)"
+                                        *ngIf="!user.isBlocked"
+                                    >
+                                        <i class="fas fa-lock"></i>
+                                    </button>
+                                    <button
+                                        class="btn btn-outline-success ms-2"
+                                        (click)="unblockUser(user.id)"
+                                        *ngIf="user.isBlocked"
+                                    >
+                                        <i class="fas fa-unlock"></i>
+                                    </button>
                                     <button 
-                                        class="btn btn-outline-danger"
+                                        class="btn btn-outline-danger ms-2"
                                         (click)="deleteUser(user.id)"
                                     >
                                         <i class="fas fa-trash"></i>
