--- a/src/app/invoices/components/view-invoice/view-invoice.component.html
+++ b/src/app/invoices/components/view-invoice/view-invoice.component.html
@@ -9,7 +9,7 @@
                         <thead class="table-light">
                             <tr>
                                 <th>#</th>
-                                <th colspan="2">Article</th>
+                                <th>Article</th>
                                 <th>Quantité</th>
                                 <th>Prix</th>
                                 <th>Total</th>
@@ -20,12 +20,6 @@
                         <tbody>
                             <tr *ngFor="let item of invoice.invoiceItems; let i = index">
                                 <th>{{ i + 1 }}</th>
-                                <td><img 
-                                    *ngIf="item.productImage" 
-                                    [src]="apiUrlImage + item.productImage" 
-                                    class="card-img-top" 
-                                    style="height: 20px; object-fit: cover;"
-                                /></td>
                                 <td> {{ item.productName }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.unitPrice }} €</td>
