--- a/src/app/products/components/table-rating/table-ratings.component.html
+++ b/src/app/products/components/table-rating/table-ratings.component.html
@@ -38,7 +38,7 @@
                 </td>
                 <td class="text-end">
                     <button
-                        *ngIf="!rating.commentId && showActions()"
+                        *ngIf="!rating.commentId && showAddCommentButton()"
                         class="btn btn-outline-secondary btn-sm me-2"
                         [routerLink]="[rating.id, 'comments', 'new']"
                         title="Répondre au commentaire"
@@ -46,12 +46,20 @@
                         <i class="fas fa-comment"></i>
                     </button>
                     <button
-                        *ngIf="rating.commentId && showActions()"
+                        *ngIf="rating.commentId && showModifyCommentButton()"
                         class="btn btn-outline-secondary btn-sm me-2"
                         [routerLink]="[rating.id, 'comments', rating.commentId, 'edit']"
                         title="Modifier la réponse"
                     >
                         <i class="fas fa-comment"></i>
+                    </button>
+                    <button
+                        *ngIf="showDeleteButton()"
+                        class="btn btn-outline-danger btn-sm"
+                        (click)="deleteRating(rating.id)"
+                        title="Supprimer la note"
+                    >
+                        <i class="fas fa-trash"></i>
                     </button>
                 </td>
             </tr>
