--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -10,6 +10,9 @@
         </tr>
     </thead>
     <tbody>
+        <tr *ngIf="!products || products.length === 0">
+            <td colspan="6" class="text-center text-muted">Aucun artice</td>
+        </tr>
         @for  (product of products; track product.id; let i = $index)  {
             <tr>
                 <th scope="row">{{ i + 1 }}</th>
